force-app/main/default/objects/Application_Round__c/Application_Round__c.object-meta.xml
<CustomObject>
    <label>Application Round</label>
    <nameField>
        <label>Application Round Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Rounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>