force-app/main/default/objects/Application_Round__c/fields/Application_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_End_Date__c</fullName>
    <inlineHelpText>This is the latest date/time when applications can be received.</inlineHelpText>
    <label>Application End Date</label>
    <type>DateTime</type>
</CustomField>