force-app/main/default/objects/Application_Round__c/fields/Application_End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Application_End_Date_Formula__c</fullName>
    <formula>datevalue(Application_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application End Date</label>
    <type>Date</type>
</CustomField>