force-app/main/default/objects/Application_Round__c/fields/Application_Form_SharePoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Application_Form_SharePoint_URL__c</fullName>
    <inlineHelpText>Paste a link to the official Application Form that is required to be used for this Application Round.  The form must first be saved in KC or KS.</inlineHelpText>
    <label>Application Form Link</label>
    <type>Url</type>
</CustomField>