force-app/main/default/objects/Application_Round__c/fields/Application_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Start_Date__c</fullName>
    <inlineHelpText>This is the earliest date/time when applications can be received.</inlineHelpText>
    <label>Application Start Date</label>
    <type>DateTime</type>
</CustomField>