force-app/main/default/objects/Application_Round__c/fields/Application_Start_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Application_Start_Date_Formula__c</fullName>
    <formula>datevalue(Application_Start_Date__c)</formula>
    <label>Application Start Date</label>
    <type>Date</type>
</CustomField>