force-app/main/default/objects/Application_Round__c/fields/Create_Assessments__c.field-meta.xml
<CustomField>
    <fullName>Create_Assessments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Assessments</label>
    <type>Checkbox</type>
</CustomField>