force-app/main/default/objects/Application_Round__c/fields/Full_Application_Round__c.field-meta.xml
<CustomField>
    <fullName>Full_Application_Round__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Full Application Round</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Application_Round__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Active Communities - Full, Procurement - Full</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Application_Round__c</referenceTo>
    <relationshipLabel>Application Rounds</relationshipLabel>
    <relationshipName>Application_Rounds</relationshipName>
    <type>Lookup</type>
</CustomField>