force-app/main/default/objects/Application_Round__c/fields/Investment_Area__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the Investment Area that holds the budget that this application round relates to</inlineHelpText>
    <label>Investment Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Investment_Area__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Investment_Area__c</referenceTo>
    <relationshipLabel>Application Rounds</relationshipLabel>
    <relationshipName>Application_Rounds</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>