force-app/main/default/objects/Application_Round__c/fields/Number_of_Applications__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Applications__c</fullName>
    <label>Number of Applications</label>
    <summaryForeignKey>Application__c.Application_Round__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>