force-app/main/default/objects/Application_Round__c/fields/Shortlisting_Date__c.field-meta.xml
<CustomField>
    <fullName>Shortlisting_Date__c</fullName>
    <label>Shortlisting Date</label>
    <type>DateTime</type>
</CustomField>