force-app/main/default/objects/Application_Round__c/recordTypes/Hillary_Expedition.recordType-meta.xml
<RecordType>
    <fullName>Hillary_Expedition</fullName>
    <active>true</active>
    <label>Hillary Expedition</label>
</RecordType>