force-app/main/default/objects/Application_Round__c/recordTypes/Procurement_EOI.recordType-meta.xml
<RecordType>
    <fullName>Procurement_EOI</fullName>
    <active>false</active>
    <label>Procurement - EOI</label>
</RecordType>