force-app/main/default/objects/Application_Round__c/validationRules/EOI_and_Full_Application_Round_Names.validationRule-meta.xml
<ValidationRule>
    <fullName>EOI_and_Full_Application_Round_Names</fullName>
    <active>true</active>
    <errorConditionFormula>not(isblank(Full_Application_Round__c)) &amp;&amp; Name &lt;&gt; SUBSTITUTE( Full_Application_Round__r.Name , &apos;Full&apos;, &apos;EOI&apos;)</errorConditionFormula>
    <errorDisplayField>Full_Application_Round__c</errorDisplayField>
    <errorMessage>Please ensure that Full Application Round has the same naming convention as the EOI Application Round, apart from the words &apos;EOI&apos; and &apos;Full&apos;</errorMessage>
</ValidationRule>