force-app/main/default/objects/Application_Round__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Investment_Area__c</columns>
    <columns>Application_Start_Date__c</columns>
    <columns>Application_End_Date__c</columns>
    <columns>Number_of_Applications__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>